--- a/g.series/topics/gnews.prestige.token.html
+++ b/g.series/topics/gnews.prestige.token.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-02-06 Mon 22:32 -->
+<!-- 2023-02-06 Mon 22:43 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -246,11 +246,11 @@ P(i)=\sum P(j)\frac{r(i,j)}{o(j)}
 </p>
 
 <p>
-为什么声望值不通过认可行为永久交付？认可行为可撤销，当认可行为撤销时，用户向被认可用户传递的这部分声望应该“回收”。同时，声望的传递应该具有永续性——当我的声望高了，被我认可的用户声望也应该水涨船高。因为在我的主页可以看到所有被我认可的内容和用户，所以声望的传递应该是持续的。并且声望需要有自然衰减机制，保证声望永远表示最近时期的用户贡献，保证奖励发放“不重不遗”。并且永久交付还需要解决声望通证的一系列，社区的总声望是固定的，还是变化的？固定的就是加直接的零和模型，很可能导致用户的认可行为大大减少。变化的就需要解决发行问题——什么情况下，社区可以发行声望？<br />
+声望通过用户之间的认可传递的依据是什么？认可行为会为被认可用户的声望背书，换言之，因为“大V”的声望高，，受“大V”认可的用户，在一定程度上也会因此受到其他用户的（非直接）认可。因此，认可的行为可以传递声望。<br />
 </p>
 
 <p>
-声望通过用户之间的认可传递的依据是什么？认可行为会为被认可用户的声望背书，换言之，因为“大V”的声望高，，受“大V”认可的用户，在一定程度上也会因此受到其他用户的（非直接）认可。因此，认可的行为可以传递声望。<br />
+为什么声望值不通过认可行为永久交付？声望的传递应该具有永续性——当我的声望高了，被我认可的用户声望也应该水涨船高。因为在我的主页可以看到所有被我认可的内容和用户，所以声望的传递应该是持续的。同时，认可行为可撤销，当认可行为撤销时，用户向被认可用户传递的这部分声望应该“回收”。并且声望需要有自然衰减机制，保证声望永远表示最近时期的用户贡献，保证奖励发放“不重不遗”。并且永久交付还需要解决声望通证的一系列，社区的总声望是固定的，还是变化的？固定的就是加直接的零和模型，很可能导致用户的认可行为大大减少。变化的就需要解决发行问题——什么情况下，社区可以发行声望？<br />
 </p>
 
 <p>
@@ -260,10 +260,7 @@ P(i)=\sum P(j)\frac{r(i,j)}{o(j)}
 </p>
 
 <p>
-没有获得和不给予其他用户认可的用户<br />
-能获得一定程度的认可，并且很少认可其他用户的用户很可能会聚集优势，如果他以某种方式“出售”自己的认可度，会造成严重后果吗？<br />
-因有些原因没有获得足够的认可的用户，其声望可能比“同流合污”的“水军”低吗？<br />
-是否应该以某种机制减缓优势的聚集和流失（过度倾斜形成垄断）？<br />
+能获得一定程度的认可，并且很少认可其他用户的用户很可能会聚集优势，如果他以某种方式“出售”自己的认可度，会造成严重后果吗？出于某些原因没有获得足够的认可的用户，其声望一可能比“同流合污”的“水军”还低吗？是否应该设计某种机制，以减缓优势的聚集和流失，防止声望过度倾斜，垄断奖励？<br />
 </p>
 
 <p>
@@ -271,7 +268,7 @@ P(i)=\sum P(j)\frac{r(i,j)}{o(j)}
 </p>
 
 <p>
-如果没有新的用户贡献被认可，声望的分布是否应该随着时间的流逝在用户之间逐渐平均？<br />
+如果没有新的用户贡献被认可，声望的分布是否应该随着时间的流逝在用户之间逐渐平均？如果曾经存在一批“大V”，因他们的贡献获得非常高的声望，并且得到奖励。随着时间推移，这群“大V”逐渐“泯然众人”，那么在这个过程中，他的可以得到的奖励也应该逐渐与众人持平，即使用户之间的认可没有太大的变化。否则，声望将不能体现近期的贡献，而曾经的贡献将会持续获得奖励。<br />
 </p>
 
 <p>
@@ -292,7 +289,7 @@ P(i)=\sum P(j)\frac{r(i,j)}{o(j)}
 </p>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2023-02-06 Mon 22:32</p>
+<p class="date">Created: 2023-02-06 Mon 22:43</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
